--- a/Big_Data/exercise03/Exercise03_HDFS.ipynb
+++ b/Big_Data/exercise03/Exercise03_HDFS.ipynb
@@ -61,6 +61,29 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 - Answers\n",
+    "\n",
+    "1. True. In HDFS, the word \"file\" is used instead of \"object\". It does not follow the key-value model but organises its files as a hierarchy, named the file namespace. \n",
+    "\n",
+    "2. False. They are typically 64 or 128 Mb, but this is not a fixed rule. \n",
+    "\n",
+    "3. False. The client directly send the data to a single DataNode which is then responsible for creating a pipeline and propagating the block to its counterparts. \n",
+    "\n",
+    "4. True. \n",
+    "\n",
+    "5. True. DataNodes can execute tasks concurrently, so there can be more clients than DataNodes.\n",
+    "\n",
+    "6. True.\n",
+    "\n",
+    "7. False. Block replicas locations are updated so not part of the checkpoint.\n",
+    "\n",
+    "8. False. It will require a block of 64 and a block of 16. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": [],
     "toc-hr-collapsed": true
@@ -73,13 +96,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 &ndash; How does the hardware cost grow as function of the amount of data we need to store in a Distributed File System such as HDFS? Why?\n",
+    "### 1.2 - Answer\n",
     "\n",
+    "A block in HDFS is much larger, generally 64 or 128 Mb in size. We recall that HDFS is optimized for capacity and throughput rather than latency (random access). The blocks of size 64/128 Mb are both large enough that time is not lost waiting for a block to arrive while being small enough that a large file can be broken up into smaller chunks and conveniently spread across several machines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 &ndash; How does the hardware cost grow as function of the amount of data we need to store in a Distributed File System such as HDFS? Why?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 - Answer\n",
+    "\n",
+    "It grows linearly as we can simply add DataNodes to the cluster. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.4 &ndash; Single Point of Failure\n",
     "\n",
     "1. Which component is the main single point of failure in Hadoop?\n",
     "\n",
     "1. What is the Secondary NameNode?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 - Answer\n",
+    "\n",
+    "1. The main point of failure is the NameNode which is why backups and checkpoints are regularly made. \n",
+    "\n",
+    "2. See sol."
    ]
   },
   {
@@ -100,6 +157,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.5 - Answer\n",
+    "\n",
+    "See sol."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. File I/O operations and replica management.\n",
     "\n",
     "\n",
@@ -113,6 +179,17 @@
     "1. Referring to the picture below, assume a block is stored in Node 3, as well as in Node 4 and Node 5. If this block of data has to be processed by a task running on Node 6, which of the three replicas will be actually read by Node 6? \n",
     "\n",
     "<img src=\"https://polybox.ethz.ch/index.php/s/lRzwDdtmytzyDRR/download\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. We can seperate the file into two blocks, one of size 100 Mb and the second, final block of size 50 Mb. Then, we can place the first one on the disk 1.1, with two replicas at 2.4 and 2.5. For the second block, we can place it in on the disk 2.6 with its replicas at 1.2 and 1.3.\n",
+    "\n",
+    "2. Store the three replicas on three different racks. Tradeoff is write speed.\n",
+    "\n",
+    "3. Node 4 or 5 as they are the closest ones if they are available. "
    ]
   },
   {
@@ -151,6 +228,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Answer\n",
+    "\n",
+    "1. 2\n",
+    "2. 4\n",
+    "3. 6\n",
+    "4. 4\n",
+    "5. 2\n",
+    "6. 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Storage models\n",
     "### 3.1 &ndash; List two differences between Object Storage and Block Storage.\n",
     "\n",
@@ -161,6 +252,19 @@
     "1. Store experimental and simulation data from CERN [ *Object storage | Block Storage* ]\n",
     "\n",
     "1. Store the auto-backups of iPhone/Android devices [ *Object storage | Block Storage* ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2\n",
+    "\n",
+    "1. As we require the files to be accessible from many client applications at the same time, object storage makes more sense. We will have a bottleneck with block storage.\n",
+    "\n",
+    "2. Block as we need to be able to store files of very large sizes - of the order Pbs.\n",
+    "\n",
+    "3. Object storage."
    ]
   },
   {
@@ -314,7 +418,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -328,9 +432,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   },
-  "toc-showcode": false
+  "toc-showcode": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
