--- a/Big_Data/exercise04/Exercise04_XMLJSON.ipynb
+++ b/Big_Data/exercise04/Exercise04_XMLJSON.ipynb
@@ -62,6 +62,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Issues with xml document:\n",
+    "\n",
+    "1. Tags are not well parenthesized - no closing tag for catalog and book for instance. \n",
+    "2. -- must be escaped in the comment.\n",
+    "3. Some quotes are not correct such as \\` for in-depth look.\n",
+    "4. Attribute `version` is duplicated in `publish_date`.\n",
+    "5. Attribute `lang=en` should be quoted.\n",
+    "6. <> should be escaped in text (for dummies).\n",
+    "7. Tag cannot with start with `XML` - reserved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "ebH3Uv1IzMWx"
    },
@@ -95,6 +110,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Issues with xml document:\n",
+    "\n",
+    "1. The closing tag for `h:title is incorrect`. \n",
+    "2. The prefix \"_xdc\" for element \"_xdc:bookreview\" is not bound.\n",
+    "3. The entity name must immediately follow the '&' in the entity reference.\n",
+    "4. The element type \"h:span\" must be terminated by the matching end-tag \"</h:span>\".\n",
+    "6. `<xdc:#pages>` and `<xdc:-comment>` are invalid tag names. \n",
+    "7. Tag `</body>` should write `<body/>`, i.e. it is not empty. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "BIGkkC4qzMW0"
    },
@@ -113,6 +142,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1, 3, 5, 7, 8 are valid. 2 is incorrect as it does not start with a letter or underscore. 4 should not have a space. 6 should not contain a hyphen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "N1LgkdQCzMW3"
    },
@@ -124,6 +160,13 @@
     "1. `&gt;` &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     '\n",
     "1. `&quot;` &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                           &\n",
     "1. `&apos;` &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                           <\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trivial"
    ]
   },
   {
@@ -216,6 +259,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Keys should have double quotes. \n",
+    "2. Keys must have corresponding values.\n",
+    "3. Entries should be separated by commas.\n",
+    "4. Improper parenthesizing.\n",
+    "5. null should be Null\n",
+    "\n",
+    "1. Document should start with {} and not [].\n",
+    "2. Strings should be double-quoted.\n",
+    "3. Commas between values.\n",
+    "4. Cannot have - in number.\n",
+    "5. Cannot have object in list.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "huP99zZyzMXD"
    },
@@ -233,6 +293,76 @@
     "|17|rudy,sage|NULL|aww ♥|1506610190|TRUE|NULL|\n",
     "    \n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JSON:\n",
+    "\n",
+    "```json\n",
+    "\n",
+    "[\n",
+    "    {\n",
+    "        \"conversation_id\" : 42,\n",
+    "        \"people\": [\"charlie\", \"adi\", \"jesse\"], \n",
+    "        \"messages\": [\n",
+    "            {\n",
+    "                \"sender\": \"charlie\",\n",
+    "                \"content\": \"hey, here's the doc ><\",\n",
+    "                \"timestamp\": 151,\n",
+    "                \"is_read\": true,\n",
+    "                \"attachment_id\": null\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"conversation_id\" : 17,\n",
+    "        \"people\": [\"rudy\", \"sage\"], \n",
+    "        \"messages\": [\n",
+    "            {\n",
+    "                \"sender\": \"rudy\",\n",
+    "                \"content\": \"look at this cute \\\"bat cat\\\"!\",\n",
+    "                \"timestamp\": 150,\n",
+    "                \"is_read\": true,\n",
+    "                \"attachment_id\" : \"img_91\"\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "XML:\n",
+    "\n",
+    "```xml\n",
+    "\n",
+    "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+    "<conversations>\n",
+    "    <conversation id = \"42\">\n",
+    "        <people>\n",
+    "            <person>charlie</person>\n",
+    "            <person>ari</person>\n",
+    "            <person>jesse</person>\n",
+    "        </people>\n",
+    "        <messages>\n",
+    "            <message>\n",
+    "                <sender>charlie</sender>\n",
+    "                <content>hey, here's the doc >&lt;</content>\n",
+    "                <timestamp>15104</timestamp>\n",
+    "                <is_read>TRUE</is_read>\n",
+    "            </message>\n",
+    "        </messages>\n",
+    "    </conversation>\n",
+    "</conversations>\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -319,6 +449,33 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```json\n",
+    "\n",
+    "{\n",
+    "    \"EnumerationResults\" : {\n",
+    "        \"Container Name\" : \"https:/...\",\n",
+    "        \"Blobs\" : [\n",
+    "            {\n",
+    "                \"Name\" : \"Picture\",\n",
+    "                \"URL\" : \"https://melanie...\",\n",
+    "                \"Properties\" : {\n",
+    "                    \"Last modified\" : \"Wed 08...\",\n",
+    "                    \"Content length\" : 151000,\n",
+    "                    \"Content encoding\" : null,\n",
+    "                    \"Blobtype\" : \"BlockBob\"\n",
+    "                }\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "h4-pCXvAR0BP"
    },
@@ -344,6 +501,30 @@
     "    \"http://swapi.dev/api/vehicles/30/\"\n",
     "  ]\n",
     "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```xml\n",
+    "\n",
+    "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+    "<document>\n",
+    "    <name>Luke Skywalker</name>\n",
+    "    <height>172</height>\n",
+    "    <mass>77</mass>\n",
+    "    <homeworld>https://swapi.dev/api/planets/1/</homeworld>\n",
+    "    <films>\n",
+    "        <film>film1</film>\n",
+    "        <film>film4</film>\n",
+    "    </films>\n",
+    "    <starships>\n",
+    "        <starship></starship>\n",
+    "    </starships>\n",
+    "</document>\n",
+    "\n",
     "```"
    ]
   },
@@ -398,7 +579,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -426,6 +607,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
