--- a/Big_Data/exercise04/Exercise04_XMLJSON_Solution.ipynb
+++ b/Big_Data/exercise04/Exercise04_XMLJSON_Solution.ipynb
@@ -649,7 +649,7 @@
     "</EnumerationResults>\n",
     "```\n",
     "**Solution**\n",
-    "```\n",
+    "```json\n",
     "{\"EnumerationResults\": \n",
     "    {\"ContainerName\": \"https://melaniestorage.blob.core.windows.net/exercise02\", \n",
     "            \"Blobs\": \n",
@@ -824,7 +824,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -838,7 +838,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
