--- a/Big_Data/exercise10/Exercise10_DocumentStores.ipynb
+++ b/Big_Data/exercise10/Exercise10_DocumentStores.ipynb
@@ -368,6 +368,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Answers\n",
+    "\n",
+    "1. \n",
+    "```json\n",
+    "db.restaurants.find({borough: \"Brooklyn\", cuisine: \"Hamburgers\"})\n",
+    "```\n",
+    "\n",
+    "2.\n",
+    "```json\n",
+    "db.restaurants.find({\"borough\": \"Brooklyn\", \"cuisine\": \"Hamburgers\"}).count()\n",
+    "```\n",
+    "3.\n",
+    "```json\n",
+    "db.restaurants.find({\"address.zipcode\": \"11225\"})\n",
+    "```\n",
+    "7.\n",
+    "```json\n",
+    "db.restaurants.find({\"grades\" : {$elemMatch : {\"grade\" : \"C\", score : {$gt : 50}}}})\n",
+    "```\n",
+    "8.\n",
+    "```json\n",
+    "db.restaurants.find({$or : [{\"grades.score\" : {$gt : 50}}, {\"grades.grade\" : \"C\"}]})\n",
+    "```\n",
+    "9.\n",
+    "```json\n",
+    "db.restaurants.aggregate([{$match : {\"borough\" : \"Queens\", \"cuisine\" : \"Brazilian\"}}, {$group : {\"_id\" : \"$address.zipcode\", \"count\": {$sum: 1}}}])\n",
+    "\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You can read more about MongoDB here: \n",
     "\n",
     "https://www.mongodb.com/docs/mongodb-shell/\n",
@@ -474,6 +508,18 @@
     "     ```db.restaurants.createIndex({ \"cuisine\": -1})   ```\n",
     "10. How are sparse indexes different from normal ones?\n",
     "11. How are hashed indexes used in MongoDB? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answers\n",
+    "\n",
+    "1.\n",
+    "```json\n",
+    "db.restaurants.createIndex({\"borough\" : 1})\n",
+    "```json"
    ]
   },
   {
@@ -608,6 +654,46 @@
     "## 8. Simple query comparison\n",
     "\n",
     "Assume you have an SQL database/MongoDB database that has a table/collection called `users`. You want to query the users that have registered in the last 24 hours. Assume that you have an attribute/collection in your database that is called `signup_time`. Write the corresponding queries in SQL and MongoDB. Which one do you think that is more readable?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quiz\n",
+    "\n",
+    "1. \n",
+    "```json\n",
+    "db.restaurants.find({\"cuisine\" : \"American\", $or : [{\"grades.grade\" : \"B\"}, {\"grades.grade\" : \"C\"}]}).count()\n",
+    "```\n",
+    "\n",
+    "2.\n",
+    "```json\n",
+    "db.restaurants.find({\"borough\" : \"Manhattan\"}).count()\n",
+    "```\n",
+    "\n",
+    "3.\n",
+    "```json\n",
+    "db.restaurants.find({\"grades.grade\" : {$ne : {$gt : \"A\"}}})\n",
+    "```\n",
+    "Does not work\n",
+    "\n",
+    "```json\n",
+    "db.restaurants.find({\"grades\" : {$not : {$elemMatch : {\"grade\" : {$ne : \"A\"}}}}}).count()\n",
+    "```\n",
+    "\n",
+    "4.\n",
+    "```json\n",
+    "db.restaurants.find({\"borough\" : \"Queens\", \"grades.grade\" : \"C\"}).count()\n",
+    "```\n",
+    "\n",
+    "5.\n",
+    "```json\n",
+    "db.restaurants.aggregate([{$project : {cuisine : \"$cuisine\", avg_rating : {$avg : \"$grades.score\"}}},\n",
+    "                            {$group : {_id : \"$cuisine\", avgByCuisine : {$avg : \"$avg_rating\"}}},\n",
+    "                            {$sort : {\"avgByCuisine\" : -1}},\n",
+    "                            {$limit : 1}])\n",
+    "```"
    ]
   }
  ],
